1.1.3
- Scan with Windows Defender renamed to Scan with Security Software
- Now uses Sophos Scan as a backup if Windows Defender is unavailable
- Updated Everything to version 1.4.1.1026
- Removed two improperly working registry tweaks
- Minor code changes and improvements